# clintshare

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
clintshare/: __init__.py  clintshare.py  convcat.py  frevadd.py  ncselvar.py
clintshare/config/: .gitignore  config-template.yml  config.yml  help.yml  query.yml
clintshare/utils/: catalog_io.py  checker.py  commit.py  dict_utils.py  freva_check.py  freva_sub.py  frevacheck.py  frevasub.py  interactive.py  mdio.py  parser.py
