[tool.poetry]
name = "CLINTshare"
version = "0.1.0"
description = "Software to share CLINT data"
authors = ["Étienne Plésiat"]
license = "BSD 3-Clause"
readme = "README.md"

include = [
  "clintshare/config/config.yml"
]

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Atmospheric Science',
    'License :: OSI Approved :: BSD License',
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    "Programming Language :: Python :: 3.10",
    'Programming Language :: Python :: 3 :: Only',
]

[tool.poetry.dependencies]
python = ">= 3.9.13"
numpy = ">= 1.21.5"
PyYAML = ">= 6.0"
tqdm = ">= 4.66.1"
xarray = ">= 2023.12.0"
netcdf4 = ">= 1.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clintshare = "clintshare.clintshare:clintshare"
frevadd = "clintshare.frevadd:frevadd"
ncselvar = "clintshare.ncselvar:ncselvar"
convcat = "clintshare.convcat:convcat"
